--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <h1>USO DE LOS ELECTRODOMESTICOS/USE OF APPLIANCES</h1>
             <p>En los siguientes videos te explicamos brevemente como funcionan nuestros electrodomésticos</p>
             <p>In the following videos we briefly explain how our appliances work.</p>
+
             <div class="video-grid">
                 <div class="video-section">
                     <video width="260" height="260" controls muted>
@@ -45,6 +46,29 @@
                     <p>En este video os mostramos como usar el microondas.</p>
                     <p>In this video we show you how to use the microwave.</p>
                 </div>
+
+                  <div class="video-section">
+                        <video width="260" height="260" controls muted>
+                            <source src="AIRECAMPANA.mp4" type="video/mp4">
+                            <source src="AIRECAMPANA.webm" type="video/webm">
+                        </video>
+                        <h2>Aire Acondicionado / Air condition </h2>
+                        <p> En este videos os mostramos como funciona el aire acondicionado</p>
+                        <p> In this video we show you how to use the air condition</p>
+                    </div>
+                </div>
+                    <div class="video-grid">
+                    <div class="video-section">
+                        <video width="260" height="260"  muted controls>
+                            <source src="lavadoracampana.mp4".mp4" type="video/mp4">
+                            <source src="lavadoracampana.webm" type="video/webm">
+                        </video>
+                         <h2>Lavadora  / Washer </h2>
+                <p>En este video os mostramos como usar la lavadora.</p>
+                <p>In this video we show you how to use the washer.</p>
+                    </div>
+
+
                 <div class="video-section">
                     <video width="260" height="260" controls muted>
                         <source src="campana.mp4" type="video/mp4">
